--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.19.6",
     "axios": "^1.6.7",
     "contentful": "^10.8.1",
     "framer-motion": "^11.0.14",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.22.0",
     "react-scroll": "^1.9.0",
